versioned_docs/version-2.2.8/team.md
---
title: Taro 团队
---

## 核心开发者

Taro 各个模块的核心开发者。设计并实现 Taro 的核心功能，把控模块的功能规划、特性引入和实现进度，当社区无法达成共识时做出最终决定。

* **督导小组**
 负责核心功能的监督把控，整体功能的规划设计，督导新功能的引入，制定开发计划，以及提交代码 Review
* **编译小组**
 负责代码文件编译到不同端的实现，微信小程序端 JSX 编译，快应用端 JSX 编译等，ESLint 插件维护
* **开发工具小组**
 负责 CLI 工具的开发与优化工作
* **组件库小组**
 负责标准组件库的规范制定、文档编写，标准组件库在不同端的实现，以及标准组件库官网建设
* **运行框架小组**
 负责不同端运行框架的实现
* **端能力 API 小组**
 负责端能力 API 的规范制定、文档编写，端能力 API 在不同端的实现
* **UI 库小组**
 负责 Taro UI 库的实现
* **社区维护小组**
 负责社区内答疑解惑，GitHub Issues 维护，问题搜集，社区项目发起与引导，第三方库适配与生态管理等

## 战略合作伙伴（联合团队）

共同参与 Taro 的研发和推广，监督 Taro 的发展流程，推动 Taro 在各领域真实业务场景中的落地和实践，促进 Taro 在业界的广泛应用。

<a
  href="https://youshu.tencent.com/"
  target="_blank"
  style={{display: "inline-block", margin: "0 10px 10px 0"}}
>
  <img src="https://mp.zhls.qq.com/sdk/img/youshu-logo.jpeg" style={{height: "88px"}}
/></a>
<a
  href="//cdc.tencent.com"
  target="_blank"
  style={{display: "inline-block", margin: "0 10px 10px 0"}}
>
  <img src="//taro.aotu.io/static/images/cdc.png" style={{height: "100px"}}
/></a>
<a
  href="//cloud.tencent.com"
  target="_blank"
  style={{display: "inline-block", margin: "0 10px 10px 0"}}
  ><img src="//taro.aotu.io/static/images/tencent.png" style={{height: "100px"}}
/></a>
<a
  href="//www.quickapp.cn/"
  target="_blank"
  style={{display: "inline-block", margin: "0 10px 10px 0"}}
  ><img src="//taro.aotu.io/static/images/quick.png" style={{height: "100px"}}
/></a>
<a
  href="//smartprogram.baidu.com/developer/index.html"
  target="_blank"
  style={{display: "inline-block", margin: "0 10px 10px 0"}}
  ><img src="//taro.aotu.io/static/images/baidu.png" style={{height: "100px"}}
/></a>
<a
  href="//q.qq.com/"
  target="_blank"
  style={{display: "inline-block", margin: "0 10px 10px 0"}}
  ><img src="//taro.aotu.io/static/images/qq.png" style={{height: "100px"}}
/></a>
<a
  href="//open.alipay.com/channel/miniIndex.htm"
  target="_blank"
  style={{display: "inline-block", margin: "0 10px 10px 0"}}
  ><img src="//taro.aotu.io/static/images/zfb.png" style={{height: "100px"}}
/></a>
<a
  href="//www.midea.cn"
  target="_blank"
  style={{display: "inline-block", margin: "0 10px 10px 0"}}
  ><img src="//taro.aotu.io/static/images/midea.png" style={{height: "100px"}}
/></a>
<a
  href="//www.sxl.cn"
  target="_blank"
  style={{display: "inline-block", margin: "0 10px 10px 0"}}
  ><img src="//taro.aotu.io/static/images/sxl.png" style={{height: "100px"}}
/></a>
<a
  href="#"
  target="_blank"
  style={{display: "inline-block", margin: "0 10px 10px 0"}}
  ><img src="//taro.aotu.io/static/images/yx.png" style={{height: "100px"}}
/></a>


## 个人贡献者

为 Taro 贡献过代码的个人。

<a href="https://github.com/NervJS/taro/graphs/contributors"><img src="https://opencollective.com/taro/contributors.svg?width=890&button=false" /></a>

## 特别鸣谢

[![nanjingboy](https://avatars1.githubusercontent.com/u/1390888?s=100&v=4)](https://github.com/nanjingboy/) | [![jsNewbee](https://avatars3.githubusercontent.com/u/20449400?s=100&v=4)](https://github.com/js-newbee/)
:---:|:---:
[nanjingboy](https://github.com/nanjingboy/) | [jsNewbee](https://github.com/js-newbee/)
